[package]
name = "SimulationController"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug", "serialize"] }
dronegowski = { git = "https://github.com/ADVPROG-2024/Dronegowski.git" }
dronegowski_utils = {git = "https://github.com/ADVPROG-2024/dronegowski_utils.git"}
rand = "0.8"
image = "0.24"
crossbeam-channel = "0.5.14"
toml = "0.8.19"
eframe = "0.30.0"

[lib]
name = "SimulationController"
path = "src/lib.rs"