[package]
name = "SimulationController"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug", "serialize"] }
dronegowski = { git = "https://github.com/ADVPROG-2024/Dronegowski.git" }
dronegowski_utils = {git = "https://github.com/ADVPROG-2024/dronegowski_utils.git"}
client = {git = "https://github.com/ADVPROG-2024/Client.git"}
servers = {git = "https://github.com/ADVPROG-2024/Servers.git"}
rand = "0.9.0"
crossbeam-channel = "0.5.14"
toml = "0.8.19"
eframe = "0.30.0"
log = "0.4.25"
image = "0.25.5"

rolling_drone = { git = "https://github.com/giorebecchi/RollingDrone.git"}
null-pointer-drone = { git = "https://github.com/The-Null-Pointer-Patrol/null-pointer-drone.git"}
rustastic-drone = { git = "https://github.com/Rustastic/RustasticDrone.git" }
rust_do_it = { git = "https://github.com/RustDoIt/Drone.git" } # non va!
skylink = { git = "https://github.com/Suge42/Skylink_drone.git" }
bagel_bomber = { git = "https://github.com/daw-dev/bagel-bomber.git", default-features = false }
rustbusters-drone = { git = "https://github.com/Rustbusters/drone.git" }
rusty_drones = { git = "https://github.com/rusty-drone-2024/rusty-drone.git" }
lockheedrustin-drone = { git = "https://github.com/Lockheed-Rustin/drone.git" }
bobry_w_locie = {git = "https://github.com/Seregno/Public_Bry_w_locie.git"}

[lib]
name = "SimulationController"
path = "src/lib.rs"

[features]
default = []  # Feature predefinita, può essere vuota
debug = []